# chip_wokwiscope

./: Cargo.toml  README.md  build.rs  diagram.json  wokwi-chip.json  wokwi.toml
.github/workflows/: chip.yaml
src/: lib.rs
