[package]
name = "chip_wokwiscope"
version = "0.1.0"
edition = "2021"

[dependencies]
wokwi_chip_ll = "0.1"
ring = { version = "0.17.7", features = ["wasm32_unknown_unknown_js"] }
getrandom = { version = "0.2", features = ["js"] }
minreq = { version = "2.12.0" , features = ["https"] }
zune-core = "0.4.12"
zune-jpeg = "0.4.13"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
